# Qwen3-TTS

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
finetuning/: sft_12hz.py
qwen_tts/core/models/: configuration_qwen3_tts.py  modeling_qwen3_tts.py
qwen_tts/core/mtp/: __init__.py  mtp_config.py  mtp_module.py
scripts/: prepare_training_data.py  sagemaker_mtp_validation.sh  validate_mtp.py
tests/: __init__.py  conftest.py  test_imports.py  test_mel_spectrogram.py  test_mtp.py
